feat: add password update api
